fix some bugs in dark mode

--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -61,7 +61,9 @@
 .bg-dark .input-group-text {
     color: #19191d !important;
 }
-
+.bg-dark .text-dark {
+    color: #e8eaed !important; 
+}
 
 
 
